fix(a11y): Darken text slightly to keep contrast on gradient in light theme

--- a/public/theme.css
+++ b/public/theme.css
@@ -58,14 +58,14 @@
 	color-scheme: light;
 	--theme-accent: hsla(var(--color-orange), 1);
 	/* This is a darker, redder orange than the main accent for sufficient contrast. */
-	--theme-text-accent: hsla(12, 100%, 41%, 1);
+	--theme-text-accent: hsla(10, 100%, 35%, 1);
 	--theme-accent-opacity: 0.1;
 	--theme-divider: hsla(var(--color-gray-90), 1);
 	--theme-text: hsla(var(--color-gray-10), 1);
-	--theme-text-light: hsla(var(--color-gray-40), 1);
 	--theme-shade-subtle: hsla(var(--color-gray-80), 1);
 	--theme-bg-hover: hsla(var(--color-gray-95), 1);
 	--theme-bg-offset: hsla(var(--color-gray-90), 1);
+	--theme-text-light: hsla(var(--color-gray-30), 1);
 	--theme-bg: hsl(273, 37%, 93%);
 	--theme-bg-gradient-top: var(--theme-bg);
 	--theme-bg-gradient-bottom: #fdfeff;
